# WASM-video-editor

./: .gitignore  Cargo.toml  index.html  tailwind.config.js  trunk.toml
src/: main.rs
src/components/: app_bar.rs  github_login_button.rs  login_form.rs  mod.rs  navigation_drawer.rs
src/icons/: github_icon.rs  hamburger_menu.rs  mod.rs
src/router/: index.rs
src/views/: Home.rs  login.rs
styles/: output.css
